--- a/styles/pages/Home/content/_4- Business Performance.scss
+++ b/styles/pages/Home/content/_4- Business Performance.scss
@@ -1,6 +1,7 @@
 .BusinessPerformance {
+    position: relative;
     width: 100%;
-    min-height: 100vh;
+    // min-height: 100vh;
     // background: $G4;
     display: flex;
     flex-direction: column;
@@ -9,6 +10,7 @@
     padding: 5rem 0;
     margin-bottom: 5rem;
     @include GlobalPadding();
+    z-index: 2;
     .Title {
         width: 100%;
         height: auto;
@@ -19,6 +21,7 @@
         gap: 2rem;
         text-align: center;
         margin-bottom: 5rem;
+        z-index: 2;
         h1 {
             font-size: 2em;
             @media (max-width: 790px) {
